data/derived/comb/progs/unify/prog2422.ml.out
Characters 61-70:
  let fixpoint (f,b) = wwhile (if b = f b then (b, false) else (b, true),b);;
                                                               ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool -> bool * bool
